Abspos Inline block not positioned correctly in text-aligned container https://bugs.webkit.org/show_bug.cgi?id=105695

Reviewed by Ojan Vafai.

Source/WebCore:

Inline positioned elements should still obey the text-alignment of their container
even when we don't do a line layout.

Test: fast/text/container-align-with-inlines.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustPositionedBlock):
(WebCore::RenderBlock::updateStaticInlinePositionForChild):
(WebCore):
* rendering/RenderBlock.h:
(RenderBlock):
* rendering/RenderBlockLineLayout.cpp:
(WebCore::setStaticPositions):

LayoutTests:

* fast/text/container-align-with-inlines-expected.txt: Added.
* fast/text/container-align-with-inlines.html: Added.


Canonical link: https://commits.webkit.org/125906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140570 268f45cc-cd09-0410-ab3c-d52691b4dbfc